FIX display issue where hover wasn't covering mint button background

--- a/src/pages/Home/Mint/Mint.scss
+++ b/src/pages/Home/Mint/Mint.scss
@@ -190,7 +190,8 @@
                         height: 100%;
                         padding: 0;
                         margin: 0;
-                        // margin-right: -20px;
+                        margin-left: -20px;
+                        margin-right: -20px;
 
                         > .numberSelect {
                             position: absolute;
